@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-04T08:13:11Z",
+  "timestamp" : "2022-06-05T01:02:41Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 342,
+  "count" : 343,
   "uniques" : 184,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
