@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 15,
   "uniques": 3,
   "clones": [
     {
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
